2006-07-07 Add compatibility for NumPy 1.0 - TEO

2006-06-29 Added a Qt4Agg backend. Thank you James Amundson - DSD

2006-06-26 Fixed a usetex bug. On windows, usetex will prcess
           postscript output in the current directory rather than
           in a temp directory. This is due to the use of spaces 
           and tildes in windows paths, which cause problems with 
           latex. The subprocess module is no longer used. - DSD

2006-06-22 Various changes to bar(), barh(), and hist().
           Added 'edgecolor' keyword arg to bar() and barh().
           The x and y args in barh() have been renamed to width
           and bottom respectively, and their order has been swapped
           to maintain a (position, value) order ala matlab. left,
           height, width and bottom args can now all be scalars or
           sequences. barh() now defaults to edge alignment instead
           of center alignment. Added a keyword arg 'align' to bar(),
           barh() and hist() that controls between edge or center bar
           alignment. Fixed ignoring the rcParams['patch.facecolor']
           for bar color in bar() and barh(). Fixed ignoring the
           rcParams['lines.color'] for error bar color in bar()
           and barh(). Fixed a bug where patches would be cleared
           when error bars were plotted if rcParams['axes.hold']
           was False. - MAS

2006-06-22 Added support for numerix 2-D arrays as alternatives to
           a sequence of (x,y) tuples for specifying paths in
           collections, quiver, contour, pcolor, transforms.
           Fixed contour bug involving setting limits for
           color mapping.  Added numpy-style all() to numerix. - EF

2006-06-20 Added custom FigureClass hook to pylab interface - see
           examples/custom_figure_class.py

2006-06-16 Added colormaps from gist (gist_earth, gist_stern,
           gist_rainbow, gist_gray, gist_yarg, gist_heat, gist_ncar) - JW
