@@ -70,12 +70,15 @@ class TexManager:
 
     configdir = get_configdir()
     texcache = os.path.join(configdir, 'tex.cache')
+    
 
     if os.path.exists(oldcache):
         print >> sys.stderr, """\
 WARNING: found a TeX cache dir in the deprecated location "%s".
   Moving it to the new default location "%s"."""%(oldcache, texcache)
         shutil.move(oldcache, texcache)
+    if not os.path.exists(texcache):
+        os.mkdir(texcache)
 
     dvipngVersion = get_dvipng_version()
 
@@ -200,8 +203,9 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         if force or not os.path.exists(dvifile):
             texfile = self.make_tex(tex, fontsize)
             outfile = basefile+'.output'
-            command = 'latex -interaction=nonstopmode -output-directory="%s" \
-                       "%s" > "%s"'%(self.texcache, texfile, outfile)
+            command = '%s cd "%s" && latex -interaction=nonstopmode "%s" \
+                       > "%s"'%(os.path.splitdrive(self.texcache)[0], 
+                                self.texcache, texfile, outfile)
             verbose.report(command, 'debug')
             exit_status = os.system(command)
             fh = file(outfile)
@@ -210,15 +214,6 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
 string:\n%s\nHere is the full report generated by LaTeX: \n\n'% tex + fh.read())
             else: verbose.report(fh.read(), 'debug')
             fh.close()
-##            command = 'latex -interaction=nonstopmode -output-directory="%s" \
-##                       "%s"'%(self.texcache, texfile)
-##            process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,\
-##                            stderr=STDOUT)
-##            exit_status = process.wait()
-##            if exit_status: raise RuntimeError('LaTeX was not able to process \
-##the flowing string:\n%s\nHere is the full report generated by LaTeX: \
-##\n\n'% tex + process.stdout.read())
-##            else: verbose.report(process.stdout.read(), 'debug')
             for fname in glob.glob(basefile+'*'):
                 if fname.endswith('dvi'): pass
                 elif fname.endswith('tex'): pass
@@ -236,8 +231,12 @@ string:\n%s\nHere is the full report generated by LaTeX: \n\n'% tex + fh.read())
         if force or not os.path.exists(pngfile):
             dvifile = self.make_dvi(tex, fontsize)
             outfile = basefile+'.output'
-            command = 'dvipng -bg Transparent -D %s -T tight -o "%s" "%s" \
-                       > "%s"'%(dpi, pngfile, dvifile, outfile)
+            command = '%s cd "%s" && dvipng -bg Transparent -D %s -T tight -o \
+                       "%s" "%s" > "%s"'%(os.path.splitdrive(self.texcache)[0], 
+                                          self.texcache, dpi, 
+                                          os.path.split(pngfile)[-1], 
+                                          os.path.split(dvifile)[-1], 
+                                          outfile)
             verbose.report(command, 'debug')
             exit_status = os.system(command)
             fh = file(outfile)
@@ -248,13 +247,6 @@ process the flowing file:\n%s\nHere is the full report generated by dvipng: \
             else: verbose.report(fh.read(), 'debug')
             fh.close()
             os.remove(outfile)
-##            process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE, 
-##                            stderr=STDOUT)
-##            exit_status = process.wait()
-##            if exit_status: raise RuntimeError('dvipng was not able to \
-##process the flowing file:\n%s\nHere is the full report generated by dvipng: \
-##\n\n'% dvifile + process.stdout.read())
-##            else: verbose.report(process.stdout.read(), 'debug')
 
         return pngfile
 
@@ -264,7 +256,7 @@ process the flowing file:\n%s\nHere is the full report generated by dvipng: \
         basefile = self.get_basefile(tex, fontsize)
         psfile = '%s.epsf'% basefile
 
-        if not os.path.exists(psfile):
+        if force or not os.path.exists(psfile):
             dvifile = self.make_dvi(tex, fontsize)
             outfile = basefile+'.output'
             command = 'dvips -q -E -o "%s" "%s" > "%s"'%(psfile, dvifile,
@@ -279,20 +271,10 @@ process the flowing file:\n%s\nHere is the full report generated by dvipng: \
             else: verbose.report(fh.read(), 'debug')
             fh.close()
             os.remove(outfile)
-##            process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
-##                            stderr=STDOUT)
-##            exit_status = process.wait()
-##            if exit_status: raise RuntimeError('dvips was not able to process \
-##the flowing file:\n%s\nHere is the full report generated by dvips: \
-##\n\n'% dvifile + process.stdout.read())
-##            else: verbose.report(process.stdout.read(), 'debug')
 
         return psfile
 
     def get_ps_bbox(self, tex, fontsize):
-##        key = tex
-##        val = self.postscriptd.get(key)
-##        if val is not None: return val
         psfile = self.make_ps(tex, fontsize)
         ps = file(psfile)
         for line in ps:
