@@ -1,3 +1,5 @@
+2006-07-07 Fixed a usetex bug with older versions of latex - DSD 
+
 2006-07-07 Add compatibility for NumPy 1.0 - TEO
 
 2006-06-29 Added a Qt4Agg backend. Thank you James Amundson - DSD
